--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,11 @@
   background-position: center;
   background-size: cover;
 }
+.timer {
+  position: absolute;
+  top: 5%;
+  left: 15%;
+  font-size: 25px;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+}
